# janus-manus-api

./: .gitignore  dev.bat  dev.sh  pyproject.toml  pytest.ini  run.sh
app/: main.py
app/application/errors/: exceptions.py
app/application/services/: app_config_service.py  status_service.py
app/domain/models/: app_config.py  event.py  file.py  health_status.py  memory.py  message.py  plan.py  search.py  tool_result.py
app/domain/repositories/: app_config_repository.py
app/domain/services/agents/: base.py  planner.py  react.py
app/domain/services/prompts/: planner.py  react.py  system.py
app/domain/services/tools/: base.py  brower.py  mcp.py  search.py  time.py
app/infrastructure/logging/: __init__.py  logging.py
app/infrastructure/repositories/: file_app_config_repository.py
app/infrastructure/storage/: cos.py  postgres.py  redis.py
app/interfaces/: dependencies.py  service_dependencies.py
app/interfaces/endpoints/: app_config_routes.py  routes.py  status_routes.py
app/interfaces/errors/: exception_handlers.py
app/interfaces/schemas/: __init__.py  app_config.py  base.py
core/: config.py
tests/: conftest.py
tests/app/interfaces/endpoints/: test_status_routes.py
